--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 		<div class="intro">
 			<div class="logo"></div>
 			<div class="main-img">
+				<div class="logo-wrapper">
+					<div class="logo-img"></div>
+					<div class="logo-text" data-localize="logo"></div>
+				</div>
+				<div class="text1" data-localize="text1"></div>
+				<div class="text2" data-localize="text2"></div>
 				<p class="tel" data-localize="tel"></p>
 				<div class="localize-wrapper">
 					<button class="localize-ua active" data-localize="btnUA"></button>
@@ -37,9 +43,28 @@
 
 			<h1 class="slogan" data-localize="slogan"></h1>
 			<ul id="menu">
-				<li data-menuanchor="secondPage"><a href="#secondPage">Second slide</a></li>
-				<li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li>
-				<li data-menuanchor="4thpage"><a href="#4thpage">Fourth slide</a></li>
+				<li data-menuanchor="secondPage">
+					<a href="#secondPage" data-localize="manu1"></a>
+					<div class="menu-list">	
+						<span data-localize="menuList1.li1"></span>
+						<span data-localize="menuList1.li2"></span>
+						<span data-localize="menuList1.li3"></span>
+						<span data-localize="menuList1.li4"></span>
+						<span data-localize="menuList1.li5"></span>
+					</div>
+				</li>
+				<li data-menuanchor="3rdPage">
+					<a href="#3rdPage" data-localize="manu2"></a>
+					<div class="menu-list second">	
+						<span data-localize="menuList2.li1"></span>
+						<span data-localize="menuList2.li2"></span>
+						<span data-localize="menuList2.li3"></span>
+						<span data-localize="menuList2.li4"></span>
+						<span data-localize="menuList2.li5"></span>
+						<span data-localize="menuList2.li6"></span>
+					</div>
+				</li>
+				<li data-menuanchor="4thpage"><a href="#4thpage" data-localize="manu3"></a></li>
 			</ul>
 			<!-- <h1 data-localize="tittle"></h1> -->
 		</div>
