--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 	
@@ -32,6 +34,7 @@
 					<div class="logo-img"></div>
 					<div class="logo-text" data-localize="logo"></div>
 				</div>
+				<div id="trail"></div>
 				<div class="text1" data-localize="text1"></div>
 				<div class="text2" data-localize="text2"></div>
 				<p class="tel" data-localize="tel"></p>
